--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/EpaNenem/BaseReactStructure#readme",
   "devDependencies": {
     "npx": "^10.0.1",
-    "webpack": "^4.1.1"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.10"
   }
 }
