--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ coverage
 .nyc_output
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+dist/
 
 # Dependency directories
 node_modules/
