--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/EpaNenem/BaseReactStructure#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "npx": "^10.0.1",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.10"
