--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "npx": "^10.0.1",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.10"
+  },
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
