--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.6",
     "npx": "^10.0.1",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.10"
