--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Base of React Applications",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --mode development --open",
     "dev": "webpack --mode development",
     "build": "webpack --mode production"
   },
@@ -27,7 +27,8 @@
     "html-webpack-plugin": "^3.0.6",
     "npx": "^10.0.1",
     "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.10"
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
     "react": "^16.2.0",
