chore: config code-split

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
   "presets": [
-    "env",
-    "react"
-  ]
+    "react",
+    ["env", {
+      "targets": {
+        "bowsers": ["last 2 versions"]
+      }
+    }],
+    "stage-0"
+  ],
+  "comments": true
 }
