--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.10",
     "cssnano": "^3.10.0",
+    "eslint": "^4.18.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
     "node-sass": "^4.7.2",
     "npx": "^10.0.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.1",
-    "prettier": "^1.11.1",
     "precss": "^3.1.2",
+    "prettier": "^1.11.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.1.1",
