--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Base of React Applications",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open",
+    "start": "webpack-dev-server --mode development --open --hot",
     "dev": "webpack --mode development",
     "build": "webpack --mode production"
   },
